# pinyinapp

./: index.html  package-lock.json  package.json
src/: App.vue  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  pinyin_converter.rs
